# oop-examples

./: CMakeLists.txt  Date.cpp  Date.h  Hotel.cpp  Hotel.h  Person.cpp  Person.h  Reservation.cpp  Reservation.h  Room.cpp  Room.h  guests.txt  main.cpp  reservations.txt  rooms.txt
priklady/: Cislo.cpp  Cislo.h  GumovePole.h  Komplexni.cpp  Realne.cpp  Student.cpp  Student.h
